# evidence-aware-engineering-workbench

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Documents/Piping Diagram/: Assembly_3D_template_filled.xlsx
Documents/R&I-Fließbild/: =A10.A10.A10.FB.001 (A58A1PQ0CA).xml
assets/aas_templates/: assembly_3d_aas_template.json  idta_nameplate_template.json  stellenplaene_aas_template.json  stellenplaene_aas_template.xml  verschaltung_aas_template.json  verschaltung_aas_template.xml
data/: Datenpunkte_V1.xlsx
iev4pi_transformation_tool/: __init__.py  main.py  models.py  suppress_warnings.py
profiles/: default__datasheet.yaml  default__klemmenplan.yaml  default__pid.yaml  default__stellenplan.yaml
scripts/: audit_aio_spec_compliance.py  audit_enhanced.py  audit_excel_transformation_quality.py  audit_exports_v0.8.py  benchmark_components.py  benchmark_models.py  benchmark_source_artifact_linking.py  build_3d_assembly_template.py  build_datasheet_template.py  build_instrument_pipe_mapping.py  build_pid_ifc_component_mapping.py  build_pid_template.py  build_standardized_blank_templates.py  build_stromlaufplan_template.py  deep_audit_semantic.py  extract_tank_blackbox_ifc.py  full_pipeline_test.py  prepare_and_audit_excel.py  prepare_assembled_ifc.py  rebuild_v1_template.py  regenerate_exports.py  run_aio_pipeline_e2e.py  test_pipeline.py  test_rag_accuracy_cached.py  test_rag_large_scale.py  test_rag_real_embeddings.py  test_rag_scenarios.py  test_reconstruction.py  verify_assembly_reconstruction.py
(+172 files in other folders)
