[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "iev4pi-transformation-tool"
version = "0.1.0"
description = "IEV4PI RAG Workbench — schema discovery, diagram analysis, and conservative extraction for engineering documents"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "lxml>=4.9",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "PyQt6>=6.6",
    "PyQt6-Fluent-Widgets>=1.5",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
    "requests>=2.31",
    "httpx>=0.25",
    "openai>=1.0",
    "langchain>=0.1",
    "langchain-openai>=0.1",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
ocr = [
    "surya-ocr>=0.4",
    "paddleocr>=2.7",
    "easyocr>=1.7",
    "rapidocr>=1.3",
]
ifc = [
    "ifcopenshell>=0.8.4",
]
aas = [
    "basyx-python-sdk",
]
aasx = [
    "aas_editor>=0.4.11",
]
dev = [
    "ruff>=0.1",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["iev4pi_transformation_tool*"]
